5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4136/executions/1822_3183.log
== TEST (2019-06-13 10:15:45) 
-- CODE:
from numpy import*
v = array(eval(imput("vetor de forma decrescente: ")))
v = 0
for i in range(-1)
print(i)
-- ERROR:
File "XXXX", line 4
    for i in range(-1)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:15:50) 
-- CODE:
from numpy import*
v = array(eval(imput("vetor de forma decrescente: ")))
v = 0
for i in range(-1)
print(i)
-- EXECUTION TIME:
0.66461
-- ERROR:
  File "/home/codebench/codes/1822/3183/main.py", line 4
    for i in range(-1)
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:17:08) 
-- CODE:
from numpy import*
v = array(eval(imput("vetor de forma crescente: ")))
v = 0
for i in range(0, 9)
print(i)
-- ERROR:
File "XXXX", line 4
    for i in range(0, 9)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:17:12) 
-- CODE:
from numpy import*
v = array(eval(imput("vetor de forma crescente: ")))
v = 0
for i in range(0, 9)
print(i)
-- EXECUTION TIME:
0.689795
-- ERROR:
  File "/home/codebench/codes/1822/3183/main.py", line 4
    for i in range(0, 9)
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:17:12) 
-- CODE:
from numpy import*
v = array(eval(imput("vetor de forma crescente: ")))
v = 0
for i in range(0, 9)
print(i)
-- ERROR:
File "XXXX", line 4
    for i in range(0, 9)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
